simple rendering of rooms
git-svn-id: file:///srv/svn/repos/futurice_reservator@15 967a2e56-9f69-44db-a86b-3acc15697453

--- a/ui/trunk/css/style.css
+++ b/ui/trunk/css/style.css
@@ -86,7 +86,12 @@ button {  width: auto; overflow: visible; }
     Author: 
  */
 
-
+#floormap_4 {
+	background: url('../images/floormap_4.png') no-repeat;
+	width: 1645px;
+	height: 482px;
+	position: relative;
+}
 
 
 
