rooms are rendered
git-svn-id: file:///srv/svn/repos/futurice_reservator@18 967a2e56-9f69-44db-a86b-3acc15697453

--- a/ui/trunk/css/style.css
+++ b/ui/trunk/css/style.css
@@ -93,7 +93,10 @@ button {  width: auto; overflow: visible; }
 	position: relative;
 }
 
-
+.room {
+	position: absolute;
+	background-color: red;
+}
 
 
 
