show reserved rooms
git-svn-id: file:///srv/svn/repos/futurice_reservator@32 967a2e56-9f69-44db-a86b-3acc15697453

--- a/ui/trunk/css/style.css
+++ b/ui/trunk/css/style.css
@@ -95,9 +95,11 @@ button {  width: auto; overflow: visible; }
 
 .room {
 	position: absolute;
-	background-color: red;
+	background-color: #23e023;
 }
-
+.room .title, .room .content {
+	padding: 5px;
+}
 
 
 
