--- a/android/Reservator/res/layout/calendar_view.xml
+++ b/android/Reservator/res/layout/calendar_view.xml
@@ -1,26 +1,22 @@
-
-<TableRow android:id="@+id/tableRow1" xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_alignParentLeft="true" android:layout_height="fill_parent"
-	android:layout_width="fill_parent" android:weightSum="1"
-	android:layout_below="@+id/buttonPrev">
-	<LinearLayout android:layout_height="fill_parent"
-		android:layout_weight="0.2" android:orientation="vertical"
-		android:padding="3dp">
-	</LinearLayout>
-	<LinearLayout android:layout_height="fill_parent"
-		android:layout_weight="0.2" android:orientation="vertical"
-		android:padding="3dp">
-	</LinearLayout>
-	<LinearLayout android:layout_height="fill_parent"
-		android:layout_weight="0.2" android:orientation="vertical"
-		android:padding="3dp">
-	</LinearLayout>
-	<LinearLayout android:layout_height="fill_parent"
-		android:layout_weight="0.2" android:orientation="vertical"
-		android:padding="3dp">
-	</LinearLayout>
-	<LinearLayout android:layout_height="fill_parent"
-		android:layout_weight="0.2" android:orientation="vertical"
-		android:padding="3dp">
-	</LinearLayout>
-</TableRow>
+	android:layout_width="fill_parent">
+    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_below="@+id/weekLabel" android:layout_height="fill_parent" android:orientation="vertical">
+        <TextView android:text="" android:visibility="invisible" android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1"></TextView>
+        <TextView android:text="8:00" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="9:00" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="10:00" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="11:00" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="12:00" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="13:00" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="14:00" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="15:00" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="16:00" android:id="@+id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+        <TextView android:text="17:00" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1" android:gravity="top|right" android:layout_gravity="right"></TextView>
+    </LinearLayout>
+    <FrameLayout android:id="@+id/verticalDivider" android:layout_width="1dp" android:layout_toRightOf="@+id/linearLayout1" android:layout_alignTop="@+id/linearLayout1" android:layout_alignBottom="@+id/linearLayout1" android:background="#000" android:layout_height="fill_parent"></FrameLayout>
+    <HorizontalScrollView android:id="@+id/horizontalScrollView1" android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_below="@+id/weekLabel" android:layout_toRightOf="@+id/verticalDivider">
+        <LinearLayout android:id="@+id/container" android:layout_height="fill_parent" android:weightSum="1" android:orientation="horizontal" android:layout_width="fill_parent">
+        </LinearLayout>
+    </HorizontalScrollView>
+</RelativeLayout>
