Addressbook model and FUM3 implementation
git-svn-id: file:///srv/svn/repos/futurice_reservator@60 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -29,8 +29,8 @@
 		</LinearLayout>
 		<AutoCompleteTextView android:layout_width="wrap_content"
 			android:id="@+id/nameAutoEditText" android:layout_height="wrap_content"
-			android:text="AutoCompleteTextView" android:layout_toRightOf="@+id/linearLayout2"
-			android:maxLines="1" android:layout_centerVertical="true"></AutoCompleteTextView>
+			android:layout_toRightOf="@+id/linearLayout2"
+			android:maxLines="1" android:layout_centerVertical="true" android:width="100sp" android:hint="Your name"></AutoCompleteTextView>
 		<Button android:layout_height="wrap_content"
 			android:layout_width="wrap_content" android:text="OK"
 			android:minWidth="40sp" android:id="@+id/reserveButton"></Button>
