calendar view stuff
git-svn-id: file:///srv/svn/repos/futurice_reservator@61 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -48,7 +48,7 @@
 			android:layout_height="wrap_content" android:text="@string/book_now"
 			android:id="@+id/bookNowButton"></Button>
 		<FrameLayout android:layout_height="match_parent" android:id="@+id/frameLayout1" android:layout_width="wrap_content" android:layout_weight="0.2"></FrameLayout>
-		<Button android:background="@drawable/kalenterinappi" android:text="Button" android:id="@+id/calendarButton" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
+		<Button android:background="@drawable/kalenterinappi" android:id="@+id/calendarButton" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
 		<FrameLayout android:layout_height="match_parent" android:id="@+id/frameLayout3" android:layout_width="wrap_content" android:layout_weight="0.4"></FrameLayout>
 	</LinearLayout>
 </LinearLayout>
