--- a/android/Reservator/res/layout/room_browse_view.xml
+++ b/android/Reservator/res/layout/room_browse_view.xml
@@ -11,12 +11,12 @@
 		android:layout_width="fill_parent" android:id="@+id/weekView1"
 		android:layout_height="fill_parent" android:layout_below="@+id/roomNameLabel"
 		android:layout_alignLeft="@+id/roomNameLabel"
-		android:layout_marginLeft="0dp" android:layout_marginTop="50dp">)
+		android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:layout_marginTop="50dp">
 		<com.futurice.android.reservator.view.CalendarView
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:layout_marginBottom="10dp"
 		android:layout_marginRight="10dp"
+		android:layout_marginBottom="0dp"
 		android:id="@+id/calendarView1"></com.futurice.android.reservator.view.CalendarView>
 	</com.futurice.android.reservator.view.WeekView>
 </RelativeLayout>
