added nice colors to the styles
git-svn-id: file:///srv/svn/repos/futurice_reservator@73 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -5,4 +5,7 @@
         <item name="android:textSize">18pt</item>
     </style>
     <color name="CalendarBorderColor">#444</color>
+    <color name="CalendarMarkerColor">#d8f6d5c5</color>
+    <color name="StatusFreeColor">#529200</color>
+    <color name="StatusReservedColor">#b24c4c</color>
 </resources>
