--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -23,11 +23,10 @@
 			android:id="@+id/timeSpanPicker1" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_weight="1" />
 		<FrameLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1"></FrameLayout>
-		<AutoCompleteTextView android:layout_width="wrap_content"
-			android:id="@+id/autoCompleteTextView1" android:layout_height="wrap_content"
+		<AutoCompleteTextView android:id="@+id/autoCompleteTextView1" android:layout_height="wrap_content"
 			android:layout_toRightOf="@+id/timeSpanPicker1" android:lines="1"
 			android:layout_centerVertical="true"
-			android:hint="Your name" android:layout_weight="2" android:completionHint="Your name" android:inputType="textFilter" android:maxLines="1" android:imeOptions="actionDone" android:completionThreshold="1"></AutoCompleteTextView>
+			android:hint="Your name" android:completionHint="Your name" android:inputType="textFilter" android:maxLines="1" android:imeOptions="actionDone" android:completionThreshold="1" android:layout_width="230dp"></AutoCompleteTextView>
 		<FrameLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1"></FrameLayout>
 		<Button android:layout_height="wrap_content"
 			android:layout_width="wrap_content" android:text="OK"
