--- a/android/Reservator/res/layout/lobby_view.xml
+++ b/android/Reservator/res/layout/lobby_view.xml
@@ -1,6 +1,6 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="fill_parent" android:layout_width="fill_parent" android:background="@drawable/background" android:id="@+id/relativeLayout1" android:padding="0dip">
-        <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_width="match_parent" android:layout_marginTop="90dp" android:layout_marginLeft="0dp">
+        <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_width="match_parent" android:layout_marginTop="90dp" android:layout_marginLeft="0dp" android:layout_marginBottom="20dp">
             <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="fill_parent"></LinearLayout>
         </ScrollView>
     </RelativeLayout>
