timespan_picker2 updates
git-svn-id: file:///srv/svn/repos/futurice_reservator@88 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -17,7 +17,7 @@
 	</LinearLayout>
 	<LinearLayout android:id="@+id/bookingMode"
 		android:gravity="center_vertical"
-		android:layout_width="1px" android:layout_weight="3" android:visibility="gone" android:layout_height="100sp">
+		android:layout_width="1px" android:layout_weight="3" android:visibility="gone" android:layout_height="wrap_content">
 		<com.futurice.android.reservator.view.CustomTimeSpanPicker
 			android:id="@+id/timeSpanPicker1" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_weight="1"  android:visibility="gone" />
